// version: 1.0

syntax = "proto3";

package qlua.rpc.getSecurityInfo;

import "qlua/rpc/qlua_structures.proto";

option optimize_for = SPEED;
option java_package = "qlua.rpc";

message Args {

    string class_code = 1;
    string sec_code = 2;
}

message Result {
    qlua.structs.Security security_info = 1;
}
